# relayer-utils

./: .eslintrc.js  .gitignore  .npmignore  CODING_GUIDELINES.md  CONTRIBUTING.md  Cargo.toml  DEV-README.md  README.md  build.js  bun.lockb  index.js  package-lock.json  package.json  tsconfig.json  wasm_build.sh
.github/: pull_request_template.md
.github/workflows/: build-test.yml  publish.yaml
js-wasm-wrapper/: index.node.js  index.web.js  package.json
js_tests/: parse_email.test.ts
pkg/: README.md  package.json  relayer_utils.d.ts  relayer_utils_bg.js  relayer_utils_bg.wasm  relayer_utils_bg.wasm.d.ts
regexes/: command.json  command_regex.circom
src/: circuit.rs  command_templates.rs  constants.rs  converters.rs  cryptos.rs  lib.rs  logger.rs  parse_email.rs  proof.rs  regex.rs  wasm.rs
src/node/: circuit.rs  converters.rs  cryptos.rs  mod.rs  parse_email.rs  regex.rs  statics.rs
tests/: account_creation.test.js  announcement.test.js  claim.test.js  email_sender.test.js  invitation_code_regex.test.js  psi_point.test.js
tests/fixtures/: spotify.eml  test.eml  x.eml
tests/outputs/: input.json
ts_tests/: airbnb_eml_invalid.ts  circuit_input.test.ts  circuit_input.ts  circuit_intput.ts  parse_email.test.ts  parse_email.ts  public_key_hash.test.ts  public_key_hash.ts  setup.ts  sha_256_pad.test.ts  sha_256_pad.ts
