[package]
name = "relayer-utils"
version = "0.3.0"
authors = ["Sora Suegami", "Aditya Bisht"]
license = "MIT"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
itertools = "0.10.3"
serde_json = "1.0.95"
serde = { version = "1.0.159", features = ["derive"] }
zk-regex-apis = { version = "2.1.1", git = "https://github.com/zkemail/zk-regex.git" }
hex = "0.4.3"
tokio = { version = "1.16", features = [
    "net",
    "io-util",
    "time",
    "rt-multi-thread",
    "macros",
] }
anyhow = "1.0.75"
once_cell = "1.18.0"
poseidon-rs = { git = "https://github.com/zkemail/poseidon-rs.git", version = "1.0.0" }
halo2curves = { version = "0.7.0", git = "https://github.com/privacy-scaling-explorations/halo2curves.git" }
rand_core = { version = "0.6", default-features = false }
num-bigint = "0.4.4"
base64 = "0.21.4"
rsa = { version = "0.9.6", features = ["serde"] }
num-traits = "0.2.15"
cfdkim = { version = "0.3.3", git = "https://github.com/zkemail/dkim.git" }
hmac-sha256 = { git = "https://github.com/zkemail/rust-hmac-sha256.git" }
ethers = "2.0.14"
slog = { version = "2.7.0", features = [
    "max_level_trace",
    "release_max_level_warn",
] }
slog-async = "2.8.0"
slog-term = "2.9.0"
slog-json = "2.6.1"
lazy_static = "1.4"
file-rotate = "0.7.5"

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6", "channel-api", "promise-api"]
