[package]
name = "relayer-utils"
version = "0.4.60"
authors = ["Sora Suegami", "Aditya Bisht"]
license = "MIT"
edition = "2018"
resolver = "2"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
itertools = "0.10.3"
serde_json = "1.0.95"
serde = { version = "1.0.159", features = ["derive"] }
# zk-regex-apis = { version = "2.1.1", git = "https://github.com/zkemail/zk-regex.git" }
zk-regex-apis = { git = "https://github.com/zkemail/zk-regex.git", branch = "dimidumo/zk-802-consistent-casing-everywhere" }
hex = "0.4.3"
anyhow = "1.0.75"
halo2curves = { git = "https://github.com/privacy-scaling-explorations/halo2curves.git", rev = "8771fe5a5d54fc03e74dbc8915db5dad3ab46a83", default-features = false }
poseidon-rs = { git = "https://github.com/zkemail/poseidon-rs.git", version = "1.0.0" }
rand_core = { version = "0.6", default-features = false }
num-bigint = "0.4.4"
rsa = { version = "0.9.6", features = ["serde"] }
cfdkim = { version = "0.3.3", git = "https://github.com/zkemail/cfdkim.git" }
hmac-sha256 = { git = "https://github.com/zkemail/rust-hmac-sha256.git" }
ethers = "2.0.14"
reqwest = "0.11.22"
slog = { version = "2.7.0", features = [
    "max_level_trace",
    "release_max_level_warn",
] }
slog-async = "2.8.0"
slog-term = "2.9.0"
slog-json = "2.6.1"
lazy_static = "1.4"
file-rotate = "0.7.5"
regex = "=1.10.6"
mailparse = "0.15.0"
wasm-bindgen = "0.2.95"
wasm-bindgen-futures = "0.4.45"
js-sys = "0.3.72"
serde-wasm-bindgen = "0.6.5"
rand = "0.8.5"
base64 = "0.22.1"
console_error_panic_hook = "0.1.7"

[dev-dependencies]
tokio = { version = "1.41", features = ["full"] }
