[package]
name = "relayer-utils"
version = "0.1.0"
authors = ["Sora Suegami", "Aditya Bisht"]
license = "MIT"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
itertools = "0.10.3"
serde_json = "1.0.95"
serde = { version = "1.0.159", features = ["derive"] }

zk-regex-apis = { git = "https://github.com/zkemail/zk-regex.git", branch = "dimidumo/zk-802-consistent-casing-everywhere" }
poseidon-rs = { git = "https://github.com/zkemail/poseidon-rs.git", version = "1.0.0" }
cfdkim = { version = "0.3.3", git = "https://github.com/zkemail/cfdkim.git" }

fancy-regex = "0.11.0"
hex = "0.4.3"
tokio = { version = "1.16", features = [
    "net",
    "io-util",
    "time",
    "rt-multi-thread",
    "macros",
] }
serde_regex = "1.1.0"
anyhow = "1.0.75"
once_cell = "1.18.0"

halo2curves = { version = "0.4.0", git = "https://github.com/privacy-scaling-explorations/halo2curves.git", rev = "81a078254518a7a4b7c69fab120621deaace9389" }
rand_core = { version = "0.6", default-features = false }
num-bigint = "0.4.4"
base64 = "0.21.4"
rsa = { version = "0.9.6", features = ["serde"] }
num-traits = "0.2.15"





sha2 = "0.10.8"
ethers = "2.0.14"
slog = { version = "2.7.0", features = ["max_level_trace", "release_max_level_warn"] }
slog-async = "2.8.0"
slog-term = "2.9.0"
slog-json = "2.6.1"
lazy_static = "1.4"
file-rotate = "0.7.5"

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6", "channel-api", "promise-api"]
